bug fix: adjusted style to eliminate unwanted white space

--- a/src/App.scss
+++ b/src/App.scss
@@ -5,6 +5,7 @@
   header {
     background-image: linear-gradient(rgb(19, 19, 83), rgb(19, 19, 83), black);
     height: 120px;
+    width: 100%;
     color: white;
     line-height: 40px;
     border-top: 1px solid rgb(19, 19, 83);
@@ -15,10 +16,9 @@
     color: white;
     border-bottom: 1px solid black;
     width: 100%;
-    padding: 20px;
 
     button {
-      margin: 0px 20px 20px 20px;
+      margin: 20px 20px 20px 20px;
       background: rgb(61, 61, 61);
       color: white;
       border: none;
@@ -47,6 +47,7 @@
     .explanation {
       width: 60%;
       margin-left: 20%;
+      margin-bottom: 20px;
     }
   }
 
@@ -54,6 +55,7 @@
     background-image: linear-gradient(black, rgb(19, 19, 83), rgb(19, 19, 83));
     height: 120px;
     line-height: 140px;
+    width: 100%;
 
     button {
       background: rgb(126, 126, 126);
